--- a/src/app/pages/admin/gestion-menu/gestion-menu.component.html
+++ b/src/app/pages/admin/gestion-menu/gestion-menu.component.html
@@ -60,7 +60,9 @@
                         </div>
                         <div class="form-group">
                             <label>Categoria</label>
-                            <input type="text" formControlName="categoria" class="form-control">
+                            <select formControlName="categoria" class="form-control">
+                                <option *ngFor="let category of categorias" [value]="category">{{ category }}</option>
+                            </select>
                         </div>
                         <div class="form-group">
                             <label>Precio</label>
