--- a/src/app/pages/admin/gestion-rest/gestion-rest.component.html
+++ b/src/app/pages/admin/gestion-rest/gestion-rest.component.html
@@ -37,7 +37,7 @@
             <h4 class="modal-title" id="modal-basic-title">Registrar/Actualizar Restaurantes</h4>
             <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
         </div>
-        <div class="modal-body">
+        <div class="modal-body" style="height: 300px; overflow-y: auto;">
             <form>
                 <div class="mb-3">
 
@@ -52,7 +52,9 @@
                         </div>
                         <div class="form-group">
                             <label>Categoria</label>
-                            <input type="text" formControlName="categoria" class="form-control">
+                            <select formControlName="categoria" class="form-control">
+                                <option *ngFor="let category of categorias" [value]="category">{{ category }}</option>
+                            </select>
                         </div>
                         <div class="form-group">
                             <label>Imagen</label>
