--- a/src/app/pages/admin/gestion-user/gestion-user.component.html
+++ b/src/app/pages/admin/gestion-user/gestion-user.component.html
@@ -70,7 +70,9 @@
                         </div>
                         <div class="form-group">
                             <label>Rol</label>
-                            <input type="text" formControlName="rol" class="form-control">
+                            <select formControlName="rol" class="form-control">
+                                <option *ngFor="let rol of roles" [value]="rol">{{ rol }}</option>
+                            </select>
                         </div>
                         <div class="form-group">
                             <label>Foto Perfil</label>
