Select para mantenimiento Menu

--- a/src/app/pages/admin/gestion-menu/gestion-menu.component.html
+++ b/src/app/pages/admin/gestion-menu/gestion-menu.component.html
@@ -9,7 +9,7 @@
                 <th scope="col">Nombre</th>
                 <th scope="col">Descripción</th>
                 <th scope="col">Cantidad</th>
-                <th scope="col">Categoría</th>
+                <th scope="col">Restaurante</th>
                 <th scope="col">Precio</th>
                 <th scope="col">Imagen</th>
                 <th scope="col"></th>
@@ -20,7 +20,7 @@
                 <td>{{ item.nombre }}</td>
                 <td>{{ item.descripcion }}</td>
                 <td>{{ item.cantidad }}</td>
-                <td>{{ item.categoria }}</td>
+                <td>{{ item.idRest }}</td>
                 <td>{{ item.precio }}</td>
                 <td><img [src]="item.imagen" height="50"></td>
                 <td>
@@ -59,9 +59,9 @@
                             <input type="text" formControlName="cantidad" class="form-control">
                         </div>
                         <div class="form-group">
-                            <label>Categoria</label>
-                            <select formControlName="categoria" class="form-control">
-                                <option *ngFor="let category of categorias" [value]="category">{{ category }}</option>
+                            <label>Restaurante</label>
+                            <select formControlName="idRest" class="form-control">
+                                <option *ngFor="let restaurante of restaurantes.data" [value]="restaurante.nombre">{{ restaurante.nombre }}</option>
                             </select>
                         </div>
                         <div class="form-group">
