BtnPaypal, Visualizacion del Historial con sus Detalles, y algunas correciones adicionales

--- a/src/app/pages/admin/gestion-rest-asociados/gestion-rest-asociados.component.html
+++ b/src/app/pages/admin/gestion-rest-asociados/gestion-rest-asociados.component.html
@@ -34,7 +34,7 @@
     <!-- Registrar Modal -->
     <ng-template #content let-modal>
         <div class="modal-header">
-            <h4 class="modal-title" id="modal-basic-title">Registrar/Actualizar Menus</h4>
+            <h4 class="modal-title" id="modal-basic-title">Registrar/Actualizar Acuerdos</h4>
             <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
         </div>
         <div class="modal-body">
