--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -31,7 +31,13 @@ h1{
     font-family: "Rowdies", sans-serif;
     font-size: 35px;
     margin: 10px;
+    animation: cargaAnimacion 1.5s ease-out;
 }
+
+@keyframes cargaAnimacion {
+    0% { opacity: 0; transform: translateY(-20px); }
+    100% { opacity: 1; transform: translateY(0); }
+  }
 
 .container-fluid h2{
     font-family: "Rowdies", sans-serif;
