--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,8 +1,8 @@
 <div class="banner">
     <div class="content">
         <div class="text-container">
-            <h1>LOREM IPSUM DOLOR SIT AMET,</h1>
-            <h1>CONSECTETUR ADIPISCING ...</h1>
+            <h1>FOODIE: EL MEJOR ALIADO</h1>
+            <h1>PARA TUS ANTOJOS REPENTINOS...</h1>
         </div>
     </div>
 </div>
@@ -54,12 +54,11 @@
         <div class="row">
             <div class="col-md-5">
                 <h2 style="font-size: 30px;">SOBRE NOSOTROS</h2>
-                <p style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed gravida
-                    lorem ut nulla consequat,
-                    in varius libero ultrices. Nullam sodales turpis sit amet justo congue, at vehicula mauris
-                    tincidunt.
-                    Fusce interdum magna sed sapien cursus, vitae consequat justo facilisis.Lorem ipsum dolor sit amet,
-                    consectetur adipiscing elit. Sed gravida lorem ut nulla consequat, in varius libero ultrices.
+                <p style="text-align: justify;">En Foodie, entendemos esos antojos repentinos que te 
+                    hacen desear algo delicioso en cualquier momento del día. Somos tu mejor aliado para 
+                    satisfacer esas ansias culinarias con facilidad y rapidez. Con una amplia selección de 
+                    restaurantes locales y platos para todos los gustos, estamos aquí para llevar la comida 
+                    que amas directamente a tu puerta, en el momento que más lo necesitas.
                 </p>
             </div>
             <div class="col-md-7">
@@ -78,13 +77,11 @@
             <div class="col-md-6">
                 <h2 class="text-center" style="font-size: 30px;">VISIÓN</h2>
                 <div class="text-center">
-                    <p style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed gravida
-                        lorem ut nulla consequat,
-                        in varius libero ultrices. Nullam sodales turpis sit amet justo congue, at vehicula mauris
-                        tincidunt.
-                        Fusce interdum magna sed sapien cursus, vitae consequat justo facilisis.Lorem ipsum dolor sit
-                        amet,
-                        consectetur adipiscing elit. Sed gravida lorem ut nulla consequat, in varius libero ultrices.
+                    <p style="text-align: justify;">Nuestra visión es crear experiencias culinarias memorables, 
+                        facilitando el acceso a la comida deliciosa y elevando la satisfacción del cliente a través 
+                        de nuestro compromiso con la excelencia en el servicio. En Foodie, buscamos inspirar momentos 
+                        de alegría y satisfacción a través de cada comida entregada, convirtiendo cada antojo en una 
+                        experiencia extraordinaria.
                     </p>
                     <img src="../../../assets/images/vision.jpg" alt="vision"
                         style="display: block; border-radius: 60px; margin: auto; margin-bottom: 30px;"
@@ -94,13 +91,10 @@
             <div class="col-md-6">
                 <h2 class="text-center" style="font-size: 30px;">MISIÓN</h2>
                 <div class="text-center">
-                    <p style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed gravida
-                        lorem ut nulla consequat,
-                        in varius libero ultrices. Nullam sodales turpis sit amet justo congue, at vehicula mauris
-                        tincidunt.
-                        Fusce interdum magna sed sapien cursus, vitae consequat justo facilisis.Lorem ipsum dolor sit
-                        amet,
-                        consectetur adipiscing elit. Sed gravida lorem ut nulla consequat, in varius libero ultrices.
+                    <p style="text-align: justify;">Nuestra misión es hacer que cada experiencia culinaria sea memorable y conveniente. 
+                        Desde los caprichos de medianoche hasta las reuniones improvisadas con amigos, estamos listos para entregar la 
+                        calidad y el sabor que mereces, sin importar la ocasión. Con Foodie, puedes confiar en una entrega confiable, 
+                        un servicio excepcional y la garantía de que tu antojo será satisfecho.
                     </p>
                     <img src="../../../assets/images/mision.jpg" alt="mision"
                         style="display: block; border-radius: 60px; margin: auto; margin-bottom: 30px;"
