--- a/src/app/pages/admin/gestion-menu/gestion-menu.component.html
+++ b/src/app/pages/admin/gestion-menu/gestion-menu.component.html
@@ -20,7 +20,7 @@
                 <td>{{ item.nombre }}</td>
                 <td>{{ item.descripcion }}</td>
                 <td>{{ item.cantidad }}</td>
-                <td>{{ item.idRest }}</td>
+                <td>{{ item.categoria }}</td>
                 <td>{{ item.precio }}</td>
                 <td><img [src]="item.imagen" height="50"></td>
                 <td>
@@ -60,7 +60,7 @@
                         </div>
                         <div class="form-group">
                             <label>Restaurante</label>
-                            <select formControlName="idRest" class="form-control">
+                            <select formControlName="categoria" class="form-control">
                                 <option *ngFor="let restaurante of restaurantes.data" [value]="restaurante.nombre">{{ restaurante.nombre }}</option>
                             </select>
                         </div>
