--- a/src/app/pages/usuario/user-info/user-info.component.css
+++ b/src/app/pages/usuario/user-info/user-info.component.css
@@ -145,8 +145,7 @@ h4{
     margin-top: 10px;
 }
 
-.btn-editar,
-.btn-guardar {
+.btn-editar{
     margin: 35px 10px;
     padding: 7.55px 25px;
     border-radius: 8px;
@@ -158,6 +157,7 @@ h4{
     font-family: "Rowdies", sans-serif;
     font-weight: 300;
     font-style: normal;
+    width: 170px;
 }
 
 
