--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -24,7 +24,7 @@
                     <ul class="dropdown-menu mant-dropdown">
                         <li><a class="dropdown-item" [routerLink]="'/admin/gestion-restaurantes'">Restaurantes</a></li>
                         <li><a class="dropdown-item" [routerLink]="'/admin/gestion-menu'">Menús</a></li>
-                        <li><a class="dropdown-item" [routerLink]="'/admin/gestion-asociados'">Asociados</a></li>
+                        <li><a class="dropdown-item" [routerLink]="'/admin/gestion-asociados'">Acuerdos</a></li>
                         <li><a class="dropdown-item" [routerLink]="'/admin/gestion-user'">Usuarios</a></li>
                     </ul>
                 </li>
