Activar Btn Comprar, ya que el paypal no hay time

--- a/src/app/pages/menu-rest/menu-rest.component.html
+++ b/src/app/pages/menu-rest/menu-rest.component.html
@@ -31,10 +31,10 @@
             $120.000,00
           </span>
         </div>
-        <!--<div>
+        <div>
           <button class="btn-pagar">Comprar <i class="fa-solid fa-bag-shopping"></i> </button>
-        </div>-->
-        <ngx-paypal style="margin-top: 20px;" [config]="payPalConfig"></ngx-paypal>
+        </div>
+        <!--<ngx-paypal style="margin-top: 20px;" [config]="payPalConfig"></ngx-paypal>-->
       </div>
     </div>
   </div>
