--- a/src/app/pages/menu-rest/menu-rest.component.html
+++ b/src/app/pages/menu-rest/menu-rest.component.html
@@ -32,7 +32,7 @@
           </span>
         </div>
         <div>
-          <button class="btn-pagar">Comprar <i class="fa-solid fa-bag-shopping"></i> </button>
+          <button class="btn-pagar" (click)="pagar()" click="pagarClicked()">Comprar <i class="fa-solid fa-bag-shopping"></i> </button>
         </div>
         <!--<ngx-paypal style="margin-top: 20px;" [config]="payPalConfig"></ngx-paypal>-->
       </div>
