--- a/src/app/pages/admin/gestion-rest-asociados/gestion-rest-asociados.component.html
+++ b/src/app/pages/admin/gestion-rest-asociados/gestion-rest-asociados.component.html
@@ -9,7 +9,7 @@
                 <th scope="col">Nombre</th>
                 <th scope="col">Fecha</th>
                 <th scope="col">Descripción</th>
-                <th scope="col">ID Rest</th>
+                <th scope="col">Restaurante</th>
                 <th scope="col"></th>
             </tr>
         </thead>
